--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<div class="container row ">
 		<div class="col-lg-4">
 			<div style = "height: 100%;" class="container bg-dark text-white">
-				<img style = "height: 30%; padding: 5%" src="DP.JPG" class="img-fluid rounded-circle mx-auto d-block">
+				<img style = "height: 30%; padding: 5%" src="images/DP.JPG" class="img-fluid rounded-circle mx-auto d-block">
 				<div class = "container cl">
 					<div class= "pad">
 						<h4>TECHNICAL SKILLS</h4>
